# prismaspace

./: .env.example  .gitattributes  .gitignore  PROJECT_STARTUP_BEST_PRACTICES.md  README.md  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 7c2d3ef7a1b2_workflow_runtime_durable_execution.py  8d9f2b0a8a32_ag_ui_message_structured_fields.py  a3f19d2c4b11_workflow_execution_event_log.py  b7d4c8e1f2a3_agent_run_event_and_tool_history.py  baede282df95_initial_migration_up.py  c4f8d66a7d3b_resource_execution_ledger.py  c9a6e0d4f5b7_agent_run_checkpoint.py  d1e4f7a9b2c3_agent_runtime_hotpath_indexes.py  e1b7c4a2f9d1_resource_tool_schema_and_chat_turn_count.py  f2e6a2d6c0b1_repair_c4f8_execution_ledger_drift.py
doc/: Agent资源能力清单.md  Agent资源评估报告.md  Coze开源与本项目Agent应用层和引擎层对比评估报告.md  Coze开源与本项目Tool应用层和引擎层对比评估报告.md  Project 技术文档.md  Resource Runtime技术文档.md  TODO.md  Workflow资源协议与运行时评估报告.md  ag-ui-guide.md  langgraph_vs_coze_vs_prismaspace_evaluation.md  workflow-TODO.md  workflow-runtime-protocol.md  workflow_coze_vs_prismaspace_evaluation.md  测试报告：Agent 引擎中的 JSON 模式与工具调用兼容性分析.md
scripts/: backup.py  collect_code.py  collect_context.py  collect_test.py  create_service.py  db-init-pg.sh  dependency_extractor.py  example.py  run_tika.sh  seed_initial_data.py  start-dev.ps1  start-prod-web.sh  start-prod-worker.sh  stop-dev.ps1  test-qwen3-32b.py  test_parsing_pipeline.py  test_tool_engine.py  test_vector_engine.py  tree_dir.sh
seed_data/: features.json  permissions.json  products.json  resource_types.json  roles.json  service_module_providers.json  service_module_types.json  service_modules.json
src/app/: main.py  middleware.py
src/app/api/: router.py
src/app/constants/: permission_constants.py  product_constants.py  resource_constants.py  role_constants.py  service_module_constants.py
src/app/core/: config.py  context.py  encryption.py  security.py  trace_manager.py
src/app/dao/: __init__.py  base_dao.py
src/app/db/: base.py  init_db.py  session.py  tenant_db_session.py
src/app/models/: __init__.py  asset.py  auditing.py  billing.py  identity.py  membership.py  module.py  permission.py  (+2 more)
tests/: conftest.py  test_perf_observability.py
tests/core/: test_security.py
(+419 files in other folders)
