[project]
name = "primaspace"
version = "0.1.0"
description = "PrismaSpace Backend API"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10.12,<3.13"
dependencies = [
    "funasr (>=1.2.7,<2.0.0)",
    "funasr-onnx (>=0.4.1,<0.5.0)",
    "langsegment (>=0.2.0,<0.3.0)",
    "numpy (==1.26)",
    "numba (>=0.62.0,<0.63.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "fastapi (>=0.118.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "pymilvus (>=2.6.2,<3.0.0)",
    "tika (>=3.1.0,<4.0.0)",
    "openai (>=1.109.1,<2.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "oss2 (>=2.19.1,<3.0.0)",
    "alibabacloud-dysmsapi20170525 (==2.0.24)",
    "alibabacloud-tea-openapi (>=0.4.1,<0.5.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pydantic[email] (>=2.11.9,<3.0.0)",
    "anyio (>=4.11.0,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy-utils (>=0.42.0,<0.43.0)",
    "uuid7 (>=0.1.0,<0.2.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "jsonschema (>=4.25.1,<5.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-magic-bin (>=0.4.14,<0.5.0) ; sys_platform == 'win32'",
    "arq (>=0.26.3,<0.27.0)",
    "redis[hiredis] (>=4.6.0)",
    "networkx (==3.4.2)",
    "python-magic (==0.4.24)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "sse-starlette (>=3.2.0,<4.0.0)",
    "gunicorn (>=25.0.1,<26.0.0)",
    "async-timeout (>=5.0.1,<6.0.0)",
    "bcrypt (==3.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "app", from = "src"}]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "fakeredis[aioredis] (>=2.32.0,<3.0.0)",
]
